Updated homepage and adjusted image width
Fixed link typo on the home page. Adjusted image width on the home page and the lasagna page.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Homemade Lasagna</h1>
-    <img src="../images/Lasagna.jpg" alt="Lasagna">
+    <img src="../images/Lasagna.jpg" alt="Lasagna" width="800">
     <h2>Description</h2>
     <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
     <h2>Ingredients</h2>
