--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/recipename.html" target="_blank">Homemade Lasagna</a>
+    <img src="./images/recipes.jpg" width = "500"><br>
+    <a href="recipes/lasagna.html" target="_blank">Homemade Lasagna</a>
 </body>
 </html>
