Add gumbo recipe to odin recipes page
This is the second recipe added to the Odin Recipes project. It includes description, ingredients, and steps.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <img src="./images/recipes.jpg" width = "500"><br>
-    <a href="recipes/lasagna.html" target="_blank">Homemade Lasagna</a>
+    <ul>
+        <a href="recipes/lasagna.html" target="_blank">Homemade Lasagna</a><br>
+        <a href="recipes/gumbo.html" target="_blank">Classic Cajun Gumbo</a>
+    </ul>
 </body>
 </html>
