--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <img src="./images/recipes.jpg" width = "500"><br>
     <ul>
         <a href="recipes/lasagna.html" target="_blank">Homemade Lasagna</a><br>
-        <a href="recipes/gumbo.html" target="_blank">Classic Cajun Gumbo</a>
+        <a href="recipes/gumbo.html" target="_blank" >Classic Cajun Gumbo</a>
     </ul>
 </body>
 </html>
